# pyFiltration

./: .gitignore  README.md  pyproject.toml
docs/: engineering_basis.md
examples/: home_air_purifier.json
src/pyfiltration/: __init__.py  calculations.py  cli.py  config.py  design.py  models.py  report.py  units.py  visualization.py  webapp.py
src/pyfiltration/static/: app.js  index.html  styles.css
tests/: test_calculations.py  test_design.py  test_webapp.py
